# LifeCapsule

./: .env.example  .gitignore  .gitigore  README.md  docker-compose.yml  pyproject.toml  run.py
src/: config.py  server.py
src/openai_client/: __init__.py  base.py  client.py  utils.py
src/router/: shortcuts.py
src/schemas/: shortcuts.py
test/: test_openai_client.py
