[project]
name = "lifecapsule"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "boto3>=1.38.41",
    "colorlog>=6.9.0",
    "fastapi>=0.116.1",
    "httpx[socket]>=0.28.1",
    "openai>=1.97.0",
    "python-multipart>=0.0.20",
    "retry>=0.9.2",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.3",
]


[tool.ruff]
line-length = 120 # 代码最大行宽
select = [ # 选择的规则
    "F",
    "E",
    "W",
    "UP",
]
ignore = [
    "UP007",
    "F401",  # 忽略未使用的导入
    "F403",  # 忽略禁止使用 `import *` 的警告
    "F405",  # 忽略从 `import *` 中未定义名称的警告
    "W291",  # 忽略使用空格代替制表符的警告
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
